--- a/WorkingWithDatabase/platforms/browser/www/Create.html
+++ b/WorkingWithDatabase/platforms/browser/www/Create.html
@@ -21,8 +21,18 @@
     		<h1>Create Database</h1>
     	</header><!-- /header -->
     	<article role="main" class="ui-content">
-    		<h3>Database has been created</h3>
-            <a href="View.html" data-ajax="false" class="ui-btn">View</a>
+    		<h3>Enter data to Logs table</h3>
+            <div data-role="fieldcontain">
+                <label for="numberBox">Id</label>
+                <input type="number"  id="id" value="" />
+            </div>
+            <div data-role="fieldcontain">
+                <label for="textBox">Log content</label>
+                <input type="text" id="log" value="" />
+            </div>
+            <a href="#" class="ui-btn" id="create" data-ajax="false">Create</a>
+
+            <a href="View.html" data-ajax="false" class="ui-btn">View All</a>
     	</article><!-- /content -->
     	<footer data-role="footer">
     		<h1>Footer</h1>
@@ -32,7 +42,10 @@
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript">
         app.initialize();
-        createDatabase();
+        $("#create").click(function(event) {
+            createDatabase();
+        });
+        
     </script>
 </body>
 
