--- a/WorkingWithDatabase/www/View.html
+++ b/WorkingWithDatabase/www/View.html
@@ -21,7 +21,7 @@
     		<h1>View table</h1>
     	</header><!-- /header -->
     	<article role="main" class="ui-content">
-    		<div id = "status" name = "status">Status Message</div>
+    		<div style="border: 1px solid" id = "status" name = "status" width="400px">Status Message</div>
             <a href="index.html" data-ajax="false" class="ui-btn">Home</a>
     	</article><!-- /content -->
     	<footer data-role="footer">
