--- a/new database/viewAll.html
+++ b/new database/viewAll.html
@@ -13,11 +13,9 @@
 			<h1>View all</h1>
 		</header><!-- /header -->
 		<article role="main" class="ui-content">
-			<div data-role="fieldcontain">
-				<label for="textBox">Search By Name</label>
-				<input type="text" name="textBox" id="name" value="" />
-			</div>
-			<a href="#" data-ajax="false" class="ui-btn" id="btnSearch">Search</a>
+			<label for="searchBox">Name</label>
+			<input type="search" name="searchBox" id="searchBox" value="" />
+			
 			<table data-role="table"  class="ui-responsive table-stroke" id="mytable">
 				<thead>
        				<tr>
