--- a/new database/viewAll.html
+++ b/new database/viewAll.html
@@ -15,13 +15,13 @@
 		<article role="main" class="ui-content">
 			<label for="searchBox">Name</label>
 			<input type="search" name="searchBox" id="searchBox" value="" />
-			
 			<table data-role="table"  class="ui-responsive table-stroke" id="mytable">
 				<thead>
        				<tr>
 						<th>Id</th>
 						<th>Name</th>
 						<th>Price</th>
+						<th>Remove</th>
 					</tr>
 				</thead>
 				<tbody>
